# gigaServer

./: .env.example  .gitignore  Makefile  README.md  start_servers.sh  start_servers_tmux.sh  todo.txt
.cursor/rules/: lua-game.mdc
bots/Ordinarnaya_bot/: .gitignore  env.example  index.js  package-lock.json  package.json  texts.js
bots/Ordinarnaya_bot/AI/: AI_User.js  config.js
bots/Ordinarnaya_bot/handlers/: index.js  messages.js  start.js
bots/Ordinarnaya_bot/utils/: userStorage.js
games/lua/: love.exe — ярлык.lnk
proxy/all/: .env.example  README.md  package.json  server.js
proxy/chatGPT/: .env.example  README.md  errorHandler.js  package.json  pnpm-lock.yaml  routes.js  server.js  utils.js
scripts/lua/: main.lua
scripts/rust/: Cargo.toml
scripts/rust/src/: main.rs
servers/go/: .gitignore  README.md  go.mod  main.go  network.go  network_local.go  relay.go  routes.go  scripts.txt
servers/nodeJs/: README.md  package.json  server.js
servers/perl-mojolicious/: README.md  app.pl
servers/rust/: .gitignore  Cargo.toml  README.md  saved_servers.json
servers/rust/public/: ajax.html  dashboard.html  navigation.html  network.html  snippets.html  snippets.json
servers/rust/src/: main.rs  routes.rs
servers/rust/src/routes/: ajax.rs  dashboard.rs  navigation.rs  snippets.rs  week2.rs  week3.rs
servers/rust/src/routes/network/: capture.rs  monitor.rs  network.rs  sniff.rs  traffic.rs
servers/rust/src/routes/network/devices/: discovery.rs  inventory.rs  mod.rs
servers/rust/src/routes/network/overview/: mod.rs  nearby_aps.rs  throughput.rs  wifi.rs
(+107 files in other folders)
