[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
packet-capture = ["pnet/default"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rand = "0.8"
once_cell = "1"
futures-util = "0.3"
dns-parser = "0.8"
dns-lookup = "2.0"
pnet = "*"
pcap = "1.2"